# run_parallel

./: CMakeLists.txt  README.md  run_parallel.inc.sh
.githooks/: pre-commit
